[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
core = { path = "../../core" }
util = { path = "../../util" }

actix-web = "3.3.2"
actix-rt = "1.1.1"

# graphql
async-graphql = { version = "2.10.3", features = ["chrono"] }
async-graphql-actix-web = "2.10.3"

#json支持
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "1.0"

# 常用库
lazy_static = "1.4.0"
dotenv = "0.15.0"
chrono = { version = "^0.4.19", features = ["serde"] } #日期支持(必须)
reqwest = "^0.11.5"  # curl 请求
bigdecimal = "0.3.0" # 精度计算

#log日志支持
log = "^0.4.14"
fast_log = "^1.3.32"

# database - rbatis , or you can use actix-pg
rbatis = "^2.1.3" #{ version = "1.8.83", default-features = false, features = ["postgres"] }
rbatis-core = { version = "2.1.4" }
rbatis-macro-driver = "2.1.0"
rbatis_sql = "2.0.20"
