[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
core = { path = "../../core" }
util = { path = "../../util" }

actix-web = "3.3.2"
actix-cors = "0.5.4"

# graphql
async-graphql = { version = "2.11.2", features = ["chrono"] }
async-graphql-actix-web = "2.11.2"
juniper = "0.15.7"

#json支持
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.69"

# 常用库
lazy_static = "^1.4.0"
dotenv = "^0.15.0"
chrono = { version = "^0.4.19", features = ["serde"] } #日期支持(必须)
reqwest = "^0.11.5"  # curl 请求
bigdecimal = "0.3.0" # 精度计算
async-trait = "0.1.51" # 异步trait

#log日志支持
log = "^0.4.14"
fast_log = "^1.3.32"
env_logger = "0.9.0"

# database - rbatis , or you can use actix-pg
rbatis = "3.0.11" #{ version = "1.8.83", default-features = false, features = ["postgres"] }
rbatis-core = { version = "3.0.8" }
rbatis-macro-driver = "3.0.0"
rbatis_sql = "3.0.3"
